--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta hppt-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta hppt-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Welcome</title>
 </head>
 <body>
 Hello
-<a href="/hello">Hello</a>
+<a href="/hello">Hello~1212</a>
 </body>
 </html>
